--- a/buy-files/switzerland.html
+++ b/buy-files/switzerland.html
@@ -314,6 +314,74 @@
 
         <div class="estate-lucerne wrap">
             <h2>Lucerne Properties</h2>
+            <div class="propety-lucerne">
+                <div class="estate-photo">
+                    <img src="../photos/ten.avif">
+                </div>
+                <div class="estate-info">
+                    <div class="estate-info-text">
+                        <h1>444 Derry Street</h1>
+                        <p>3 Bedrooms, 4 Bathrooms, Kitchen, Living Room, Dinning Room, Basement, Office Room, Pool, BBQ Area, Outdoor Garage</p>
+                    </div>
+                    <div class="estate-price">
+                        <p><b>$4.780.000</b></p>
+                    </div>
+                    <div id="estate-button">
+                        <a href="../html-files/book-tour-of-house.html">Book A Tour</a>
+                    </div>
+                </div>
+            </div>
+            <div class="properties-lucerne">
+                <div class="estate-photo">
+                    <img src="../photos/thirtin.avif">
+                </div>
+                <div class="estate-info">
+                    <div class="estate-info-text">
+                        <h1> 666 Castle Rock</h1>
+                        <p>5 Bedrooms, 7 Bathrooms, Highly Modern, Kitchen, Living Room, Dinning Room, 2 Office Rooms, Pool, BBQ Area, Outdoor Garage</p>
+                    </div>
+                    <div class="estate-price">
+                        <p><b>$8.999.000</b></p>
+                    </div>
+                    <div id="estate-button">
+                        <a href="../html-files/book-tour-of-house.html">Book A Tour</a>
+                    </div>
+                </div>
+            </div>
+            <div class="lucerne-property">
+                <div class="estate-photo">
+                    <img src="../photos/three.jpeg">
+                </div>
+                <div class="estate-info">
+                    <div class="estate-info-text">
+                        <h1>555 Pennywise Street</h1>
+                        <p>8 Bedrooms, 10 Bathrooms, Kitchen, Living Room, Dinning Rooom, Basement, Pool, BBQ Area, 4 Cars Garage, 2 Office Rooms</p>
+                    </div>
+                    <div class="estate-price">
+                        <p><b>$10.200.000</b></p>
+                    </div>
+                    <div id="estate-button">
+                        <a href="../html-files/book-tour-of-house.html">Book A Tour</a>
+                    </div>
+                </div>
+            </div>
+            <div class="lucerne-properties">
+                <div class="estate-photo">
+                    <img src="../photos/twelve.jpeg">
+                </div>
+                <div class="estate-info">
+                    <div class="estate-info-text">
+                        <h1>234 Ghostface Street</h1>
+                        <p>Swiss Archtecture, 4 Bedrooms, 6 Bathrooms, Kitchen, Living Room, Dinning Room, Basement, Attic, 1 Office Room</p>
+                    </div>
+                    <div class="estate-price">
+                        <p><b>$1.110.000</b></p>
+                    </div>
+                    <div id="estate-button">
+                        <a href="../html-files/book-tour-of-house.html">Book A Tour</a>
+                    </div>
+                </div>
+            </div>
         </div>
     </main>
 
