--- a/buy-files/switzerland.html
+++ b/buy-files/switzerland.html
@@ -382,6 +382,23 @@
                     </div>
                 </div>
             </div>
+            <div class="lucerne-last-house">
+                <div class="estate-photo">
+                    <img src="../photos/two.jpeg">
+                </div>
+                <div class="estate-info">
+                    <div class="estate-info-text">
+                        <h1>231 Georgie Street</h1>
+                        <p>3 Bedrooms, 5 Bathrooms, Pool, BBQ Area, Kitchen, Living Room, Dinning Room, Basement, 2 Office Rooms, Outdoor Garage </p>
+                    </div>
+                    <div class="estate-price">
+                        <p><b>$8.999.000</b></p>
+                    </div>
+                    <div id="estate-button">
+                        <a href="../html-files/book-tour-of-house.html">Book A Tour</a>
+                    </div>
+                </div>
+            </div>
         </div>
     </main>
 
