index 50% responsive to resizing down to a 350px wide phone

--- a/html-files/sell.html
+++ b/html-files/sell.html
@@ -84,13 +84,13 @@
                                 <div class="prop-name">
                                     <h2>Property Name</h2>
                                     <label for="Property Name">
-                                        <input type="text" name="" id="" class="property-info">
+                                        <input type="text" name="" id="" class="property-info" placeholder="Insert Property Name...">
                                     </label>
                                 </div>
                                 <div class="prop-location">
                                     <h2>Property Location</h2>
                                     <label for="Property Name">
-                                        <input type="text" name="" id="" class="property-info">
+                                        <input type="text" name="" id="" class="property-info" placeholder="Insert Property Location...">
                                     </label>
                                 </div>
                             </div>
