--- a/html-files/index.html
+++ b/html-files/index.html
@@ -123,14 +123,16 @@
 
                 <div class="property-continue">
                     <a  href="properties-all.html">
-                        <div class="property-next-button">
-                            <i class="fa-solid fa-arrow-right"></i>
-                        </div>
-                        <div id="last-property">
-                            <img src="/photos/house5.jpeg" alt="">
-                            <div class="property-text">
-                                <p>Salhusvegen 21C</p>
-                                <span>220 000$</span>
+                        <div id="last-property-all">
+                            <div class="property-next-button">
+                                <i class="fa-solid fa-arrow-right"></i>
+                            </div>
+                            <div id="last-property-bottom">
+                                <img src="/photos/house5.jpeg" alt="">
+                                <div class="property-text">
+                                    <p>Salhusvegen 21C</p>
+                                    <span>220 000$</span>
+                                </div>
                             </div>
                         </div>
                     </a>
