--- a/buy-files/scotland.html
+++ b/buy-files/scotland.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <link type="text/css" rel="stylesheet" href="../css-files/header-footer.css">
+    <link type="text/css" rel="stylesheet" href="../css-files/property-cards.css">
     <meta charset="UTF-8">
     <meta name="Scotland Locations Page Real Estate Agency" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="AKB">
@@ -32,6 +33,12 @@
 
     <!--Content-->
     <main class="page-body">
+        <div class="estate-edinburgh">
+            <h2>Edinburgh Properties</h2>
+            <div class="property-edinburgh">
+                <
+            </div>
+        </div>
     </main>
 
    <!--Footer-->
