--- a/buy-files/scotland.html
+++ b/buy-files/scotland.html
@@ -33,10 +33,58 @@
 
     <!--Content-->
     <main class="page-body">
-        <div class="estate-edinburgh">
+        <div class="estate-edinburgh wrap">
             <h2>Edinburgh Properties</h2>
             <div class="property-edinburgh">
-                <
+                <div class="estate-photo">
+                    <img src="../photos/house-eight.jpeg">
+                </div>
+                <div class="estate-info">
+                    <div class="estate-info-text">
+                        <h1>456 Hogsmeade</h1>
+                        <p>6 Bedrooms, 11 Bathrooms, 2 Car Garage, Kitchen, Living Room, Dinning Room, Winter Garden, Attic, Basement, Office Room</p>
+                    </div>
+                    <div class="estate-price">
+                        <p><b>$5.210.000</b></p>
+                    </div>
+                    <div id="estate-button">
+                        <a href="../html-files/book-tour-of-house.html">Book A Tour</a>
+                    </div>
+                </div>
+            </div>
+            <div class="edinburgh-property">
+                <div class="estate-photo">
+                    <img src="../photos/house-eleven.jpeg">
+                </div>
+                <div class="estate-info">
+                    <div class="estate-info-text">
+                        <h1>123 Gotham City</h1>
+                        <p>5 Bedrooms, 7 Bathrooms, Pool, BBQ Area, Kitchen, Living Room, Dinning Room, Basement, Balcony, Bay Acess, Outdoor Garage</p>
+                    </div>
+                    <div class="estate-price">
+                        <p><b>$7.999.000</b></p>
+                    </div>
+                    <div id="estate-button">
+                        <a href="../html-files/book-tour-of-house.html">Book A Tour</a>
+                    </div>
+                </div>
+            </div>
+            <div class="properties-edinburgh">
+                <div class="estate-photo">
+                    <img src="../photos/house-five.jpeg">
+                </div>
+                <div class="estate-info">
+                    <div class="estate-info-text">
+                        <h1>999 Riverdale</h1>
+                        <p>4 Bedroom, 6 Bathroom, 4 Cars Garage, Kitchen, Living Room, Dinning Room, Basement, Gated Property, Huge Backyard</p>
+                    </div>
+                    <div class="estate-price">
+                        <p><b>$4.999.000</b></p>
+                    </div>
+                    <div id="estate-button">
+                        <a href="../html-files/book-tour-of-house.html">Book A Tour</a>
+                    </div>
+                </div>
             </div>
         </div>
     </main>
