--- a/buy-files/scotland.html
+++ b/buy-files/scotland.html
@@ -86,6 +86,40 @@
                     </div>
                 </div>
             </div>
+            <div class="edinburgh-house">
+                <div class="estate-photo">
+                    <img src="../photos/house-four.jpeg">
+                </div>
+                <div class="estate-info">
+                    <div class="estate-info-text">
+                        <h1>222 Star City</h1>
+                        <p>3 Bedrooms, 5 Bathrooms, Kitchen, Living Room, Dinning Room, Basement, 2 Cars Garage, Gated Property, Office Room</p>
+                    </div>
+                    <div class="estate-price">
+                        <p><b>$2.333.000</b></p>
+                    </div>
+                    <div id="estate-button">
+                        <a href="../html-files/book-tour-of-house.html">Book A Tour</a>
+                    </div>
+                </div>
+            </div>
+            <div class="edinburgh-last">
+                <div class="estate-photo">
+                    <img src="../photos/house-house.jpeg">
+                </div>
+                <div class="estate-info">
+                    <div class="estate-info-text">
+                        <h1>444 Hill Valey</h1>
+                        <p>10 Bedrooms, 12 Bathrooms, Kitchen, 2 Living Rooms, Dinning Room, 2 Office Rooms, Library, Gated Property, Basement, Attic</p>
+                    </div>
+                    <div class="estate-price">
+                        <p><b>$9.999.000</b></p>
+                    </div>
+                    <div id="estate-button">
+                        <a href="../html-files/book-tour-of-house.html">Book A Tour</a>
+                    </div>
+                </div>
+            </div>
         </div>
     </main>
 
