Staff page HTML

--- a/html-files/staff.html
+++ b/html-files/staff.html
@@ -1,104 +1,154 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <link type="text/css" rel="stylesheet" href="../css-files/header-footer.css">
-    <meta charset="UTF-8">
-    <meta name="Staff Page Real Estate Agency" content="width=device-width, initial-scale=1.0">
-    <meta name="author" content="AKB">
+  <head>
+    <link
+      type="text/css"
+      rel="stylesheet"
+      href="../css-files/header-footer.css"
+    />
+    <meta charset="UTF-8" />
+    <meta
+      name="Staff Page Real Estate Agency"
+      content="width=device-width, initial-scale=1.0"
+    />
+    <meta name="author" content="AKB" />
     <title>Staff Page Real Estate Agency</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <!--Header-->
     <header class="page-header">
-        <div id="header-logo">
-            <a href="./index.html">
-                <img src="../media/example_2.png">
-            </a>
-        </div>
-        <div id="header-icons">
-            <a href="./login.html">
-                <img src="../media/account.png">
-            </a>
-            <img src="../media/line.png">
-        </div>
-        <div id="links-header">
-            <a href="./construction.html">Build</a>
-            <a href="./rent.html">Rent</a>
-            <a href="./sell.html">Sell</a>
-            <a href="./buy.html">Buy</a>
-        </div>
+      <div id="header-logo">
+        <a href="./index.html">
+          <img src="../media/example_2.png" />
+        </a>
+      </div>
+      <div id="header-icons">
+        <a href="./login.html">
+          <img src="../media/account.png" />
+        </a>
+        <img src="../media/line.png" />
+      </div>
+      <div id="links-header">
+        <a href="./construction.html">Build</a>
+        <a href="./rent.html">Rent</a>
+        <a href="./sell.html">Sell</a>
+        <a href="./buy.html">Buy</a>
+      </div>
     </header>
 
     <!--Content-->
     <main class="page-body">
+      <h1>Meet Our Staff</h1>
+      <section id="staff-profiles">
+        <article class="staff-profile">
+          <img src="../media/staff_1.png" alt="Staff Member 1" />
+          <h2>John Doe</h2>
+          <h3>Broker</h3>
+          <p>
+            John has been a broker for 15 years and specializes in residential
+            properties.
+          </p>
+          <ul>
+            <li>
+              <a href="mailto:john.doe@realestateagency.com"
+                >john.doe@realestateagency.com</a
+              >
+            </li>
+            <li><a href="tel:+1234567890">(123) 456-7890</a></li>
+          </ul>
+        </article>
+        <article class="staff-profile">
+          <img src="../media/staff_2.png" alt="Staff Member 2" />
+          <h2>Jane Smith</h2>
+          <h3>Broker</h3>
+          <p>
+            Jane has been a broker for 8 years and specializes in residential
+            properties.
+          </p>
+          <ul>
+            <li>
+              <a href="mailto:jane.smith@realestateagency.com"
+                >jane.smith@realestateagency.com</a
+              >
+            </li>
+            <li><a href="tel:+9807654321">(980) 765-4321</a></li>
+          </ul>
+        </article>
+      </section>
     </main>
 
-<!--Footer-->
-<footer class="page-footer">
-    <div id="footer-info-box">
+    <!--Footer-->
+    <footer class="page-footer">
+      <div id="footer-info-box">
         <h1>Have Any Questions</h1>
-        <p>With Us You Can Sell, Buy, Rent And Build. We Are Here To Offer You The Best Of The Best In The Market.</p>
-        <p>Real Estate Agency Have Decades Worth Of Experience, We Have The Best Property Brokers, The Best Construction Workers, And The Best Houses And Apartment</p>
-    </div>
-    <div id="footer-call-icon-box">
+        <p>
+          With Us You Can Sell, Buy, Rent And Build. We Are Here To Offer You
+          The Best Of The Best In The Market.
+        </p>
+        <p>
+          Real Estate Agency Have Decades Worth Of Experience, We Have The Best
+          Property Brokers, The Best Construction Workers, And The Best Houses
+          And Apartment
+        </p>
+      </div>
+      <div id="footer-call-icon-box">
         <div id="footer-call-icon">
-            <img src="../media/icons8-call-50.png">
+          <img src="../media/icons8-call-50.png" />
         </div>
         <div id="footer-call-icon-text">
-            <p>123 456 789</p>
+          <p>123 456 789</p>
         </div>
-    </div>
-    <div id="footer-mall-icon-box">
+      </div>
+      <div id="footer-mall-icon-box">
         <div id="footer-mail-icom">
-            <img src="../media/icons8-email-50.png">
+          <img src="../media/icons8-email-50.png" />
         </div>
         <div id="footer-mail-icon-text">
-            <p>RealEstateAgency@gmail.com</p>
+          <p>RealEstateAgency@gmail.com</p>
         </div>
-    </div>
-    <div id="footer-about-box">
+      </div>
+      <div id="footer-about-box">
         <h1>About Real Estate Agency</h1>
         <a href="./about.html">About Us</a>
-        <br>
+        <br />
         <a href="./our-misjion.html">Our Mision</a>
-        <br>
+        <br />
         <div id="footer-middle-text">
-            <a href="login.html">Login / Create Account</a>
+          <a href="login.html">Login / Create Account</a>
         </div>
         <div id="footer-longer-text">
-            <a href="./history.html">Real Estate Agency Background</a>
+          <a href="./history.html">Real Estate Agency Background</a>
         </div>
         <div id="footer-last-text">
-            <a href="./faq.html">FAQ</a>
+          <a href="./faq.html">FAQ</a>
         </div>
-    </div>
-    <div id="footer-work-box">
+      </div>
+      <div id="footer-work-box">
         <h1>Real Estate Agency Work</h1>
         <a href="./contact.html">Contact Us</a>
-        <br>
+        <br />
         <a href="./staff.html">Our Team</a>
-        <br>
+        <br />
         <a href="./work-for-us.html">Carrer</a>
-        <br>
+        <br />
         <div id="footer-middle-text-work">
-            <a href="./vision-for-the-future.html">Our Future Vision</a>
+          <a href="./vision-for-the-future.html">Our Future Vision</a>
         </div>
         <div id="footer-last-text-work">
-            <a href="./faq.html">FAQ</a>
+          <a href="./faq.html">FAQ</a>
         </div>
-    </div>
-    <div id="footer-services-box">
+      </div>
+      <div id="footer-services-box">
         <h1>Our Services</h1>
         <a href="./buy.html">Buy</a>
-        <br>
+        <br />
         <a href="./sell.html">Sell</a>
-        <br>
+        <br />
         <a href="./rent.html">Rent</a>
-        <br>
+        <br />
         <a href="./construction.html">Build</a>
-    </div>
-</footer>
-</body>
-
+      </div>
+    </footer>
+  </body>
 </html>
