--- a/buy-files/scotland.html
+++ b/buy-files/scotland.html
@@ -121,6 +121,27 @@
                 </div>
             </div>
         </div>
+
+        <div class="estate-glasgow wrap">
+            <h2>Glasgow Properties</h2>
+            <div class="property-glasglow">
+                <div class="estate-photo">
+                    <img src="../photos/house-nine.jpeg">
+                </div>
+                <div class="estate-info">
+                    <div class="estate-info-text">
+                        <h1>123 Blue Valey</h1>
+                        <p>Highly Modern, 5 Bedrooms, 8 Bathrooms, Kitchen, Living Room, Dinning Room, 2 Office Rooms, Pool, Gated Property, Basement</p>
+                    </div>
+                    <div class="estate-price">
+                        <p><b>$3.999.000</b></p>
+                    </div>
+                    <div id="estate-button">
+                        <a href="../html-files/book-tour-of-house.html">Book A Tour</a>
+                    </div>
+                </div>
+            </div>
+        </div>
     </main>
 
    <!--Footer-->
