--- a/buy-files/scotland.html
+++ b/buy-files/scotland.html
@@ -141,6 +141,23 @@
                     </div>
                 </div>
             </div>
+            <div class="properties-glasgow">
+                <div class="estate-photo">
+                    <img src="../photos/house-one.png">
+                </div>
+                <div class="estate-info">
+                    <div class="estate-info-text">
+                        <h1>999 Central City</h1>
+                        <p>Very Modern, 7 Bedrooms, 9 Bathrooms, Kitchen, Living Room, Dinning room, Office Room, 3 Cars Garage, Library, Basement</p>
+                    </div>
+                    <div class="estate-price">
+                        <p><b>$10.250.000</b></p>
+                    </div>
+                    <div id="estate-button">
+                        <a href="../html-files/book-tour-of-house.html">Book A Tour</a>
+                    </div>
+                </div>
+            </div>
         </div>
     </main>
 
