--- a/buy-files/scotland.html
+++ b/buy-files/scotland.html
@@ -148,7 +148,7 @@
                 <div class="estate-info">
                     <div class="estate-info-text">
                         <h1>999 Central City</h1>
-                        <p>Very Modern, 7 Bedrooms, 9 Bathrooms, Kitchen, Living Room, Dinning room, Office Room, 3 Cars Garage, Library, Basement</p>
+                        <p>Very Modern, 7 Bedrooms, 9 Bathrooms, Kitchen, Living Room, Dinning Room, Office Room, 3 Cars Garage, Library, Basement</p>
                     </div>
                     <div class="estate-price">
                         <p><b>$10.250.000</b></p>
@@ -156,6 +156,28 @@
                     <div id="estate-button">
                         <a href="../html-files/book-tour-of-house.html">Book A Tour</a>
                     </div>
+                </div>
+            </div>
+            <div class="property-glasgow-house">
+                <div class="estate-photo">
+                    <img src="../photos/house-seven.jpeg">
+                </div>
+                <div class="estate-info">
+                    <div class="estate-info-text">
+                        <h1>123 DuckBurg</h1>
+                        <p>Royal Archtecture, 6 Bedrooms, 10 Bathrooms, Kithcen, Living Room, Dinning Room, 2 Office Room, 4 Cars Garage, Attic, Basement</p>
+                    </div>
+                    <div class="estate-price">
+                        <p><b>$8.250.000</b></p>
+                    </div>
+                    <div id="estate-button">
+                        <a href="../html-files/book-tour-of-house.html">Book A Tour</a>
+                    </div>
+                </div>
+            </div>
+            <div class="property-glasgow-house-one">
+                <div class="estate-photo">
+                    <img src="../photos/house-six.jpeg">
                 </div>
             </div>
         </div>
