--- a/buy-files/scotland.html
+++ b/buy-files/scotland.html
@@ -179,6 +179,18 @@
                 <div class="estate-photo">
                     <img src="../photos/house-six.jpeg">
                 </div>
+                <div class="estate-info">
+                    <div class="estate-info-text">
+                        <h1>444 Goosevile</h1>
+                        <p>Roayl Archtecture, 5 Bedrooms, 9 Bathrooms, Kitchen, Living Room, Dinning Room, Office Room, Attic, Basement, Garage, Gated Property</p>
+                    </div>
+                    <div class="estate-price">
+                        <p><b>$8.999.000</b></p>
+                    </div>
+                    <div id="estate-button">
+                        <a href="../html-files/book-tour-of-house.html">Book A Tour</a>
+                    </div>
+                </div>
             </div>
         </div>
     </main>
