--- a/buy-files/scotland.html
+++ b/buy-files/scotland.html
@@ -192,6 +192,23 @@
                     </div>
                 </div>
             </div>
+            <div class="property-glasgow-last">
+                <div class="estate-photo">
+                    <img src="../photos/house-ten.jpeg">
+                </div>
+                <div class="estate-info">
+                    <div class="estate-info-text">
+                        <h1>333 Keystone</h1>
+                        <p>6 Bedrooms, 10 Bathrooms, Kitchen, Living Room, Dinning Room, 2 Office Rooms, Basement, Library, 4 Cars Garage, Very Modern</p>
+                    </div>
+                    <div class="estate-price">
+                        <p><b>$12.250.000</b></p>
+                    </div>
+                    <div id="estate-button">
+                        <a href="../html-files/book-tour-of-house.html">Book A Tour</a>
+                    </div>
+                </div>
+            </div>
         </div>
     </main>
 
