--- a/buy-files/poland.html
+++ b/buy-files/poland.html
@@ -81,6 +81,57 @@
                     </div>
                 </div>
             </div>
+            <div class="property-warsaw-house-one">
+                <div class="estate-photo">
+                    <img src="../photos/house.jpeg">
+                </div>
+                <div class="estate-info">
+                    <div class="estate-info-text">
+                        <h1>313 Puddington</h1>
+                        <p>4 Bedrooms, 6 Bathrooms, Kitchen, Living Room, Dinning Room, Office Room, Basement, Shed, Gated Property, 2 Cars Garage</p>
+                    </div>
+                    <div class="estate-price">
+                        <p><b>$4.990.000</b></p>
+                    </div>
+                    <div id="estate-button">
+                        <a href="../html-files/book-tour-of-house.html">Book A Tour</a>
+                    </div>
+                </div>
+            </div>
+            <div class="property-warsaw-house-two">
+                <div class="estate-photo">
+                    <img src="../photos/villa.jpeg">
+                </div>
+                <div class="estate-info">
+                    <div class="estate-info-text">
+                        <h1>331 Star City Street</h1>
+                        <p>6 Bedrooms, 9 Bathrooms, Kitchen, Living Room, Dinning Room, Office Room, Basement, Attic, 4 Cars Garage</p>
+                    </div>
+                    <div class="estate-price">
+                        <p><b>$5.120.000</b></p>
+                    </div>
+                    <div id="estate-button">
+                        <a href="../html-files/book-tour-of-house.html">Book A Tour</a>
+                    </div>
+                </div>
+            </div>
+            <div class="property-warsaw-last">
+                <div class="estate-photo">
+                    <img src="../photos/lux.jpeg">
+                </div>
+                <div class="estate-info">
+                    <div class="estate-info-text">
+                        <h1>100 Wakanda</h1>
+                        <p>8 Bedrooms, 11 Bathrooms, Kitchen, Living Room, Dinning Room, 2 Office Rooms, Balcony, Pool, 4 Cars Garage, Basement</p>
+                    </div>
+                    <div class="estate-price">
+                        <p><b>$19.999.000</b></p>
+                    </div>
+                    <div id="estate-button">
+                        <a href="../html-files/book-tour-of-house.html">Book A Tour</a>
+                    </div>
+                </div>
+            </div>
         </div>
     </main>
 
