--- a/html-files/about.html
+++ b/html-files/about.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <link type="text/css" rel="stylesheet" href="../css-files/header-footer.css">
+    <link rel="stylesheet" href="../css-files/about.css">
     <meta charset="UTF-8">
     <meta name="About Page Real Estate Agency" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="AKB">
@@ -32,6 +33,31 @@
 
     <!--Content-->
     <main class="page-body">
+
+        <div class="content">
+            <div class="aboutus">
+                <div class="aboutus-textbox">
+                    <h1>About Us - Real Estate Agency</h1>
+                    <p>Welcome to Real Estate Agency, a premier real estate agency established in 1987. Founded with the vision of revolutionizing the real estate industry, our company was born out of the desire to redefine the standard of excellence in property transactions and make it easier for poeple to find their dream homes.</p>
+                    <p>With a commitment to professionalism, innovation, and ethical business practices, we strive to build lasting relationships with our clients based on trust, reliability, and mutual success. We believe that every real estate transaction is an opportunity to make a positive impact in people's lives and communities, and we are dedicated to making your real estate journey as seamless and rewarding as possible.</p>
+                </div>
+                <div>
+                    <img src="/photos/1987.jpg" alt="">
+                </div>
+            </div>
+
+            <h2>Our Mission</h2>
+
+
+            <h2>Our Background</h2>
+
+            <h2>Become a Member</h2>
+
+            <h2>FAQ</h2>
+
+            <p>If you have any other questions, you're welcome to contact us <a href="contact.html">here</a></p>
+        </div>
+
     </main>
 
     <!--Footer-->
