more text for about us

--- a/html-files/about.html
+++ b/html-files/about.html
@@ -36,20 +36,32 @@
 
         <div class="content">
             <div class="aboutus">
-                <div class="aboutus-textbox">
+                <div class="textbox">
                     <h1>About Us - Real Estate Agency</h1>
                     <p>Welcome to Real Estate Agency, a premier real estate agency established in 1987. Founded with the vision of revolutionizing the real estate industry, our company was born out of the desire to redefine the standard of excellence in property transactions and make it easier for poeple to find their dream homes.</p>
                     <p>With a commitment to professionalism, innovation, and ethical business practices, we strive to build lasting relationships with our clients based on trust, reliability, and mutual success. We believe that every real estate transaction is an opportunity to make a positive impact in people's lives and communities, and we are dedicated to making your real estate journey as seamless and rewarding as possible.</p>
                 </div>
-                <div>
+                <div class="aboutus-picture">
                     <img src="/photos/1987.jpg" alt="">
                 </div>
             </div>
 
-            <h2>Our Mission</h2>
+            <div class="textbox">
+                <h2>Our Mission</h2>
+                <p>We in Real Estate Agency believe in eco friendly and affordable homes for everyone. Our mission at Real Estate Agency is simple yet impactful: to revolutionize the housing industry by integrating eco-friendly practices into every aspect of our operations while ensuring homes remain accessible to all.</p>
+                <p>With a commitment to environmental stewardship, we prioritize the integration of solar panels into every new property we build. By harnessing the power of renewable energy, we not only reduce carbon footprints but also offer homeowners the opportunity to save on energy costs in the long run.</p>
+                <p>At Real Estate Agency, we firmly believe that sustainability shouldn't come at the expense of affordability. That's why we work tirelessly to keep our homes within reach of all individuals and families, regardless of budget constraints. Through innovative construction methods, efficient design, and strategic partnerships, we strive to make eco-conscious living accessible to everyone.</p>
+                <p>From renting and selling homes to building new properties, our reach extends across borders. With a global presence, we aim to promote sustainability and affordability in housing markets worldwide, ensuring that communities everywhere have access to environmentally responsible living options.</p>
+                <p>Join us on our mission to create a greener, more sustainable future for generations to come, one home at a time. At Real Estate Agency, we're not just building houses—we're building a better world.</p>
+                <p>Become a member now! <a href="login.html">Create Account</a></p>
+            </div>
 
-
-            <h2>Our Background</h2>
+            <div class="textbox">
+                <h2>Our Background</h2>
+                <p>Real Estate Agency traces its roots back to 1987 when it was founded by a visionary neighborhood real estate agent with a passion for creating a better future for renters, buyers, and sellers. Fueled by a desire to simplify the real estate process and enhance the quality of life for all involved, our founder embarked on a mission to redefine the industry's standards.</p>
+                <p>Initially funded through a combination of personal savings and a small business loan, our founder set out to establish a real estate agency that prioritized community well-being and environmental sustainability. Inspired by a fascination with nature and a commitment to eco-conscious living, he sought to incorporate green technologies and practices into the homes he sold and rented.</p>
+                <p>Since its humble beginnings, Real Estate Agency has grown into a trusted name in the industry, known for its dedication to customer satisfaction, ethical business practices, and environmental responsibility. Our journey from a neighborhood agent to a global force in real estate is a testament to our founder's vision and the enduring values that continue to guide us today.</p>
+            </div>
 
             <h2>Become a Member</h2>
 
