time for pictures and css

--- a/html-files/about.html
+++ b/html-files/about.html
@@ -63,11 +63,15 @@
                 <p>Since its humble beginnings, Real Estate Agency has grown into a trusted name in the industry, known for its dedication to customer satisfaction, ethical business practices, and environmental responsibility. Our journey from a neighborhood agent to a global force in real estate is a testament to our founder's vision and the enduring values that continue to guide us today.</p>
             </div>
 
-            <h2>Become a Member</h2>
+            <div class="textbox">
+                <h2>Become a Member</h2>
+                <p>Joining Real Estate Agency as a member opens doors to a world of possibilities in property transactions. By creating an account, you gain access to a comprehensive platform where you can seamlessly sell, rent, buy, and even build properties. Moreover, as a member, you'll receive instant notifications whenever a new house, apartment, or real estate agent fitting your preferences hits the market, ensuring you never miss out on the perfect opportunity. Don't miss your chance to streamline your real estate journey—<a href="login.html">become a member today!</a></p>
+            </div>
 
-            <h2>FAQ</h2>
-
-            <p>If you have any other questions, you're welcome to contact us <a href="contact.html">here</a></p>
+            <div class="textbox">
+                <h2>FAQ</h2>
+                <p>If you have any other questions or want to book one of our Agents, you're welcome to contact us <a href="contact.html">here</a></p>
+            </div>
         </div>
 
     </main>
