--- a/html-files/about.html
+++ b/html-files/about.html
@@ -46,24 +46,35 @@
                 </div>
             </div>
 
-            <div class="textbox">
-                <h2>Our Mission</h2>
-                <p>We in Real Estate Agency believe in eco friendly and affordable homes for everyone. Our mission at Real Estate Agency is simple yet impactful: to revolutionize the housing industry by integrating eco-friendly practices into every aspect of our operations while ensuring homes remain accessible to all.</p>
-                <p>With a commitment to environmental stewardship, we prioritize the integration of solar panels into every new property we build. By harnessing the power of renewable energy, we not only reduce carbon footprints but also offer homeowners the opportunity to save on energy costs in the long run.</p>
-                <p>At Real Estate Agency, we firmly believe that sustainability shouldn't come at the expense of affordability. That's why we work tirelessly to keep our homes within reach of all individuals and families, regardless of budget constraints. Through innovative construction methods, efficient design, and strategic partnerships, we strive to make eco-conscious living accessible to everyone.</p>
-                <p>From renting and selling homes to building new properties, our reach extends across borders. With a global presence, we aim to promote sustainability and affordability in housing markets worldwide, ensuring that communities everywhere have access to environmentally responsible living options.</p>
-                <p>Join us on our mission to create a greener, more sustainable future for generations to come, one home at a time. At Real Estate Agency, we're not just building houses—we're building a better world.</p>
-                <p>Become a member now! <a href="login.html">Create Account</a></p>
+            <div class="mission">
+                <div class="textbox">
+                    <h2>Our Mission</h2>
+                    <p>We in Real Estate Agency believe in eco friendly and affordable homes for everyone. Our mission at Real Estate Agency is simple yet impactful: to revolutionize the housing industry by integrating eco-friendly practices into every aspect of our operations while ensuring homes remain accessible to all.</p>
+                    <p>With a commitment to environmental stewardship, we prioritize the integration of solar panels into every new property we build. By harnessing the power of renewable energy, we not only reduce carbon footprints but also offer homeowners the opportunity to save on energy costs in the long run.</p>
+                    <p>At Real Estate Agency, we firmly believe that sustainability shouldn't come at the expense of affordability. That's why we work tirelessly to keep our homes within reach of all individuals and families, regardless of budget constraints. Through innovative construction methods, efficient design, and strategic partnerships, we strive to make eco-conscious living accessible to everyone.</p>
+                    <p>From renting and selling homes to building new properties, our reach extends across borders. With a global presence, we aim to promote sustainability and affordability in housing markets worldwide, ensuring that communities everywhere have access to environmentally responsible living options.</p>
+                    <p>Join us on our mission to create a greener, more sustainable future for generations to come, one home at a time. At Real Estate Agency, we're not just building houses—we're building a better world.</p>
+                    <p>Become a member now! <a href="login.html">Create Account</a></p>
+                </div>
+                <div class="mission-picture">
+                    <img src="/photos/houseonglobe.jpg" alt="">
+                </div>
             </div>
 
-            <div class="textbox">
-                <h2>Our Background</h2>
-                <p>Real Estate Agency traces its roots back to 1987 when it was founded by a visionary neighborhood real estate agent with a passion for creating a better future for renters, buyers, and sellers. Fueled by a desire to simplify the real estate process and enhance the quality of life for all involved, our founder embarked on a mission to redefine the industry's standards.</p>
-                <p>Initially funded through a combination of personal savings and a small business loan, our founder set out to establish a real estate agency that prioritized community well-being and environmental sustainability. Inspired by a fascination with nature and a commitment to eco-conscious living, he sought to incorporate green technologies and practices into the homes he sold and rented.</p>
-                <p>Since its humble beginnings, Real Estate Agency has grown into a trusted name in the industry, known for its dedication to customer satisfaction, ethical business practices, and environmental responsibility. Our journey from a neighborhood agent to a global force in real estate is a testament to our founder's vision and the enduring values that continue to guide us today.</p>
+            <div class="background">
+                <div class="textbox" id="background-textbox">
+                    <h2>Our Background</h2>
+                    <p>Real Estate Agency traces its roots back to 1987 when it was founded by a visionary neighborhood real estate agent with a passion for creating a better future for renters, buyers, and sellers. Fueled by a desire to simplify the real estate process and enhance the quality of life for all involved, our founder embarked on a mission to redefine the industry's standards.</p>
+                    <p>Initially funded through a combination of personal savings and a small business loan, our founder set out to establish a real estate agency that prioritized community well-being and environmental sustainability. Inspired by a fascination with nature and a commitment to eco-conscious living, he sought to incorporate green technologies and practices into the homes he sold and rented.</p>
+                    <p>Since its humble beginnings, Real Estate Agency has grown into a trusted name in the industry, known for its dedication to customer satisfaction, ethical business practices, and environmental responsibility. Our journey from a neighborhood agent to a global force in real estate is a testament to our founder's vision and the enduring values that continue to guide us today.</p>
+                </div>
+                <div class="background-picture">
+                    <img id="image1" src="/photos/buisnessgroupbw.jpg" alt="">
+                    <img id="image2" src="/photos/walkingbuisnessman.jpg" alt="">
+                </div>
             </div>
 
-            <div class="textbox">
+            <div class="textbox" id="becomemember">
                 <h2>Become a Member</h2>
                 <p>Joining Real Estate Agency as a member opens doors to a world of possibilities in property transactions. By creating an account, you gain access to a comprehensive platform where you can seamlessly sell, rent, buy, and even build properties. Moreover, as a member, you'll receive instant notifications whenever a new house, apartment, or real estate agent fitting your preferences hits the market, ensuring you never miss out on the perfect opportunity. Don't miss your chance to streamline your real estate journey—<a href="login.html">become a member today!</a></p>
             </div>
