--- a/html-files/about.html
+++ b/html-files/about.html
@@ -34,6 +34,11 @@
     <!--Content-->
     <main class="page-body">
 
+        <div class="toppicture">
+            <h1>- ABOUT US -<br> <span>Real Estate Agency</span></h1>
+            <img src="/photos/realestateagents.jpg" alt="">
+        </div>
+
         <div class="content">
             <div class="aboutus">
                 <div class="textbox">
@@ -76,7 +81,8 @@
 
             <div class="textbox" id="becomemember">
                 <h2>Become a Member</h2>
-                <p>Joining Real Estate Agency as a member opens doors to a world of possibilities in property transactions. By creating an account, you gain access to a comprehensive platform where you can seamlessly sell, rent, buy, and even build properties. Moreover, as a member, you'll receive instant notifications whenever a new house, apartment, or real estate agent fitting your preferences hits the market, ensuring you never miss out on the perfect opportunity. Don't miss your chance to streamline your real estate journey—<a href="login.html">become a member today!</a></p>
+                <p>Joining Real Estate Agency as a member opens doors to a world of possibilities in property transactions. By creating an account, you gain access to a comprehensive platform where you can seamlessly sell, rent, buy, and even build properties. Moreover, as a member, you'll receive instant notifications whenever a new house, apartment, or real estate agent fitting your preferences hits the market, ensuring you never miss out on the perfect opportunity. Don't miss your chance to streamline your real estate journey.</p>
+                <a href="login.html">become a member today!</a>
             </div>
 
             <div class="textbox">
