--- a/html-files/about.html
+++ b/html-files/about.html
@@ -35,15 +35,15 @@
     <main class="page-body">
 
         <div class="toppicture">
-            <h1>- ABOUT US -<br> <span>Real Estate Agency</span></h1>
+            <h1>ABOUT US<br> <span>Real Estate Agency</span></h1>
             <img src="/photos/realestateagents.jpg" alt="">
         </div>
 
         <div class="content">
-            <div class="aboutus">
+            <div class="aboutus" id="content">
                 <div class="textbox">
-                    <h1>About Us - Real Estate Agency</h1>
-                    <p>Welcome to Real Estate Agency, a premier real estate agency established in 1987. Founded with the vision of revolutionizing the real estate industry, our company was born out of the desire to redefine the standard of excellence in property transactions and make it easier for poeple to find their dream homes.</p>
+                    <h1>Welcome!</h1>
+                    <p>-to Real Estate Agency, a premier real estate agency established in 1987. Founded with the vision of revolutionizing the real estate industry, our company was born out of the desire to redefine the standard of excellence in property transactions and make it easier for poeple to find their dream homes.</p>
                     <p>With a commitment to professionalism, innovation, and ethical business practices, we strive to build lasting relationships with our clients based on trust, reliability, and mutual success. We believe that every real estate transaction is an opportunity to make a positive impact in people's lives and communities, and we are dedicated to making your real estate journey as seamless and rewarding as possible.</p>
                 </div>
                 <div class="aboutus-picture">
@@ -59,14 +59,29 @@
                     <p>At Real Estate Agency, we firmly believe that sustainability shouldn't come at the expense of affordability. That's why we work tirelessly to keep our homes within reach of all individuals and families, regardless of budget constraints. Through innovative construction methods, efficient design, and strategic partnerships, we strive to make eco-conscious living accessible to everyone.</p>
                     <p>From renting and selling homes to building new properties, our reach extends across borders. With a global presence, we aim to promote sustainability and affordability in housing markets worldwide, ensuring that communities everywhere have access to environmentally responsible living options.</p>
                     <p>Join us on our mission to create a greener, more sustainable future for generations to come, one home at a time. At Real Estate Agency, we're not just building houses—we're building a better world.</p>
-                    <p>Become a member now! <a href="login.html">Create Account</a></p>
+                    <h4>Our Newest ECO friendly properties we have built throughout the year:</h4>
                 </div>
+                <div class="mission-picture">
+                    <div class="pictures">
+                        <img src="/photos/ecohouse1.jpg" alt="" id="firstpicture">
+                        <img src="/photos/ecohouseinside.jpg" alt="">
+                        <img src="/photos/ecohouse2.jpg" alt="">
+                        <img src="/photos/ecohouseinside2.jpg" alt="">
+                        <img src="/photos/ecohouseinside3.webp" alt="">
+                        <img src="/photos/ecohouse4.webp" alt="" id="lastpicture">
+                    </div>
+                </div>
+                <div class="mission-buildhousehere">
+                    <p>Build your dream home with us! <a href="construction.html">HERE</a></p>
+                </div>
+                <!--
                 <div class="mission-picture">
                     <img src="/photos/houseonglobe.jpg" alt="">
                 </div>
+                -->
             </div>
 
-            <div class="background">
+            <div class="background" id="content">
                 <div class="textbox" id="background-textbox">
                     <h2>Our Background</h2>
                     <p>Real Estate Agency traces its roots back to 1987 when it was founded by a visionary neighborhood real estate agent with a passion for creating a better future for renters, buyers, and sellers. Fueled by a desire to simplify the real estate process and enhance the quality of life for all involved, our founder embarked on a mission to redefine the industry's standards.</p>
@@ -85,7 +100,7 @@
                 <a href="login.html">become a member today!</a>
             </div>
 
-            <div class="textbox">
+            <div class="textbox" id="content">
                 <h2>FAQ</h2>
                 <p>If you have any other questions or want to book one of our Agents, you're welcome to contact us <a href="contact.html">here</a></p>
             </div>
