--- a/html-files/about.html
+++ b/html-files/about.html
@@ -41,7 +41,7 @@
 
         <div class="content">
             <div class="aboutus" id="content">
-                <div class="textbox">
+                <div class="textbox" id="aboutus-textbox">
                     <h1>Welcome!</h1>
                     <p>-to Real Estate Agency, a premier real estate agency established in 1987. Founded with the vision of revolutionizing the real estate industry, our company was born out of the desire to redefine the standard of excellence in property transactions and make it easier for poeple to find their dream homes.</p>
                     <p>With a commitment to professionalism, innovation, and ethical business practices, we strive to build lasting relationships with our clients based on trust, reliability, and mutual success. We believe that every real estate transaction is an opportunity to make a positive impact in people's lives and communities, and we are dedicated to making your real estate journey as seamless and rewarding as possible.</p>
@@ -102,6 +102,13 @@
 
             <div class="textbox" id="content">
                 <h2>FAQ</h2>
+                <p></p>
+                <p></p>
+                <p></p>
+                <p></p>
+                <p></p>
+                <p></p>
+
                 <p>If you have any other questions or want to book one of our Agents, you're welcome to contact us <a href="contact.html">here</a></p>
             </div>
         </div>
